# BrandBook

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  WEB_UI_GUIDE.md  app.py  docker-compose.yml  example.py  generator.py  main.py  pyproject.toml  requirements.txt  test_url_finder.py  url_finder.py
.github/workflows/: ci.yml  dependency-check.yml  release.yml
k8s/: README.md  configmap.yaml  deploy.sh  deployment.yaml  ingress.yaml  namespace.yaml  secret.yaml  service.yaml
static/: .gitkeep
templates/: index.html
tests/: __init__.py  test_app.py
